--- a/package.json
+++ b/package.json
@@ -15,5 +15,16 @@
   "bugs": {
     "url": "https://github.com/SebastianPetak/budget-tool/issues"
   },
-  "homepage": "https://github.com/SebastianPetak/budget-tool#readme"
+  "homepage": "https://github.com/SebastianPetak/budget-tool#readme",
+  "devDependencies": {
+    "eslint": "^3.19.0"
+  },
+  "dependencies": {
+    "bluebird": "^3.5.0",
+    "body-parser": "^1.17.2",
+    "ejs": "^2.5.6",
+    "express": "^4.15.3",
+    "express-session": "^1.15.3",
+    "mongoose": "^4.10.4"
+  }
 }
