--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint": "^3.19.0"
   },
   "dependencies": {
+    "bcrypt": "^1.0.2",
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.2",
     "ejs": "^2.5.6",
